# minimind

./: pyproject.toml
docs/: day1_rms_norm.md  day1_rope.md
method/: gqa_base.ipynb  learning_gqa.py  rms_norm.py  rope.ipynb  rope.py  test_dim.py
model/: model.py  test_model.py
tests/: test_gqa.py  test_rope.py
trainer/: trainer_pretrain.py  trainer_utils.py
