[project]
name = "mokiomind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.15.5",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "datasets>=3.0.0",
    "einops",
    "tiktoken",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0"
]
